# goodluck

./: encpic.py  encpic_400x300.py  minpng.py
3d/: 3DBench_PLA_22m.gcode  3D_PCB1_2026-04-27.SLDASM  3D_PCB1_2026-04-27.step  pcb2.SLDASM  上垫片10mm.SLDPRT  下垫片10mm.SLDPRT  丝印对齐.SLDASM  丝印开窗.DWG  丝印开窗.SLDPRT  丝印开窗2.DWG  丝印开窗3.DWG  丝印开窗3.cdr  主板轮廓.SLDPRT  二维码.cdr  前面板开窗丝印.cdr  前面板开窗丝印2.cdr  喇叭轮廓.SLDPRT  太阳能.SLDPRT  小背板.DXF  小背板.SLDPRT  小背板2.AI  小背板3.DXF  屏幕.SLDPRT  带一体后盖.SLDASM  带底框架.3mf  带底框架.DWG  带底框架.SLDPRT  带底框架.STEP  带底框架.step.SLDPRT  带底框架薄底.3mf  带底框架薄底.SLDPRT  带底框架薄底.STEP  框架.SLDPRT  框架.STL  框架2.STL  框架3.3mf  框架3.STL  电池.SLDPRT  背板.SLDPRT  装配体1.SLDASM  (+3 more)
3d/测试/: 螺旋1.STEP  螺旋2.STEP  装配体1.SLDASM  装配体3.STEP  零件1.SLDPRT
qfp/: index copy.html  index.html  index_flow_analysis.md
qfp/dl/: account_manager.php  agent_warehouse.php  cell_location.php  cmdir.php  (+20 more)
sc/: p1.psd  p2.psd  p3.psd
test/: per.rar  t.json  test.txt
test/per/per/E-Paper/: CMakeLists.txt  Makefile  flash_prog_cfg.ini  main.c  proj.conf
test/per/per/E-Paper/src/EPD/: DEV_Config.c  DEV_Config.h  EPD.h  GUI_Paint.c  GUI_Paint.h  font12CN.c  font16.c  font16CH.c  font18CN.c  font20CN.c  font24.c  font24CN.c  font8_CN.c  fonts.h  per_img.h
test/per/per/E-Paper/src/EPD/utility/: Debug.h  EPD_4in2b_V2.c  EPD_4in2b_V2_old.c  EPD_4in2b_V2_old.h
test/per/per/E-Paper/src/config/: FreeRTOSConfig.h  mbedtls_sample_config.h  user_config.h
test/per/per/E-Paper/src/dev/: DS1302.h  SHT40.h  adc_vbat.h  http_get.h  per_draw.h  sys_code.h  wifi.h
web/: cmdir.php  font_server.py  index.html  index2.html  up.php
(+37 files in other folders)
